Fixed "View Full Render" bugs: Icons overlapping the element and javascript not working (#394)
* Fixed full render issue

* Added script link

* Fixed so javascript works

* Added whitespace

--- a/src/assets/styles/global/_base.scss
+++ b/src/assets/styles/global/_base.scss
@@ -92,4 +92,5 @@ p {
   width: 100vw;
   padding: 1rem;
   background-color: $color__navy-gray-3;
+  color: $color__white;
 }
